# gmao

./: .gitignore  README.md  example.py  pyproject.toml  requirements.txt
data/m21c_ens_strm1/: Y1997
data/m21c_ens_strm2/: Y2006  Y2007  Y2009
data/m21c_ens_strm3/: Y2016  Y2017  Y2018  Y2019
examples/: process_ensemble.py
m21ctools/: README.md  __init__.py  cube2latlon.py  data_handler.py  pyproject.toml  visualization.py
m21ctools/m21ctools/: data_handler_2d.py  plot_example.py
m21ctools/tests/: test.py  tests_cube2latlon.py
notebooks/data/: sample_CS2d.nc4
notebooks/data/m21c_ens_strm1/: Y1998  Y1999
notebooks/data/m21c_ens_strm2/: Y2008
notebooks/scripts/: 2D_CubedSphere_template.ipynb
scripts/: data_handler_2d.ipynb  ensemble_optimized.py
scripts/.ipynb_checkpoints/: 2D_CubedSphere_template-checkpoint.ipynb  Ensemble_Spread-checkpoint.ipynb
tests/: test_ensemble.py
